--- a/catalog.html
+++ b/catalog.html
@@ -121,10 +121,10 @@
             <a href="#">По названию</a>
           </li>
           <li class="sort-item arrow arrow-down">
-            <a href="#"><img src="img/icon-down-dir.svg" width="11" height="10" alt="Стрелка вниз"></a>
+            <a href="#"><img src="img/icon-down-dir.svg" width="11" height="10" alt="Сортировка по убыванию"></a>
           </li>
           <li class="sort-item arrow">
-            <a href="#"><img src="img/icon-up-dir.svg" width="11" height="10" alt="Стрелка вверх"></a>
+            <a href="#"><img src="img/icon-up-dir.svg" width="11" height="10" alt="Сортировка по возрастанию"></a>
           </li>
         </ul>
     </section>
