--- a/index.html
+++ b/index.html
@@ -191,22 +191,22 @@
 
   <section class="appointment">
     <h2>Напишите нам</h2>
-    <button class="close-button" type="submit"></button>
     <form class="appointment-form" action="https://echo.htmlacademy.ru" method="post">
-      <p class="appointment-item">
+      <p class="appointment-item appointment-name">
         <label for="appointment-name">Ваше имя:</label>
         <input id="appointment-name" type="text" name="name" placeholder="Имя Фамилия">
       </p>
-      <p class="appointment-item">
+      <p class="appointment-item appointment-email">
         <label for="appointment-email">Ваш email:</label>
         <input id="appointment-email" type="text" name="email" placeholder="email@example.com">
       </p>
-      <p class="appointment-item">
+      <p class="appointment-item appointment-comment">
         <label for="appointment-comment">Текст письма:</label>
-        <input id="appointment-comment" type="text" name="comment" placeholder="В свободной форме">
+        <textarea id="appointment-comment" type="textarea" name="comment" rows="4" placeholder="В свободной форме"></textarea>
       </p>
-      <button class="button" type="submit">Отправить</button>
+      <button class="button appointment-button" type="submit">Отправить</button>
       </form>
+      <button class="close-button" type="button" aria-label="Закрыть"></button>
     </section>
 
   </body>
