--- a/index.html
+++ b/index.html
@@ -148,7 +148,11 @@
       <p class="contacts-phones"><a class="contacts-phone" href="tel:+78005558628">+7 800 555-86-28</a></p>
       <a class="button button-contacts" href="blank.html">Напишите нам</a>
     </section>
-      <!-- Здесь будет карта -->
+
+    <section class="map">
+      <h2 class="visually-hidden">Как до нас добраться</h2>
+      <img src="img/map.png" width="1440" height="416" alt="Офис компании по адресу набережная реки Карповки, 5, литера П, Санкт-Петербург">
+    </section>
 
     <div class="footer-columns">
     <section class="footer-social">
