добавила карту в футер, стилизацию для шаблонов

--- a/catalog.html
+++ b/catalog.html
@@ -138,9 +138,9 @@
               <p class="info-site">Информационный сайт<br> для туристов</p>
               <a class="button template-button" href="blank.html">9 900 ₽</a>
             </div>
-            <p class="template-item-image">
-            <img class="template-item-image" src="img/catalog/sedona.png" width="358" height="578" alt="Sedona Информационный сайт для туристов">
-            </p>
+            <div class="template-item-image">
+            <img src="img/catalog/sedona.png" width="358" height="578" alt="Sedona Информационный сайт для туристов">
+            </div>
           </li>
           <li class="template-item">
             <div class="template-item-description">
@@ -212,16 +212,24 @@
     </main>
 
     <footer class="main-footer">
-      <div class="container">
-      <section class="contacts">
+      <section class="contacts-map">
         <h2 class="visually-hidden">Контакты</h2>
+        <div class="map">
+          <img src="img/map.png" width="1440" height="416" alt="Офис компании по адресу набережная реки Карповки, 5, литера П, Санкт-Петербург">
+        </div>
+        <div class="contacts">
         <h3>NЁRDS DESIGN STUDIO</h3>
         <p class="contacts-address">наб. Реки Карповки,<br>
           5 лит П, Санкт-Петербург</p>
         <p class="contacts-phones"><a class="contacts-phone" href="tel:+78005558628">+7 800 555-86-28</a></p>
         <a class="button button-contacts" href="blank.html">Напишите нам</a>
+        </div>
+        <div class="marker">
+          <img src="img/map-marker.png" width="231" height="190" alt="Маркер">
+        </div>
       </section>
-        <!-- Здесь будет карта -->
+
+      <div class="container">
 
         <div class="footer-columns">
           <section class="footer-social">
