--- a/index.html
+++ b/index.html
@@ -139,21 +139,24 @@
     </main>
 
   <footer class="main-footer">
-    <div class="container">
-    <section class="contacts">
+    <section class="contacts-map">
       <h2 class="visually-hidden">Контакты</h2>
+      <div class="map">
+        <img src="img/map.png" width="1440" height="416" alt="Офис компании по адресу набережная реки Карповки, 5, литера П, Санкт-Петербург">
+      </div>
+      <div class="contacts">
       <h3>NЁRDS DESIGN STUDIO</h3>
       <p class="contacts-address">наб. Реки Карповки,<br>
         5 лит П, Санкт-Петербург</p>
       <p class="contacts-phones"><a class="contacts-phone" href="tel:+78005558628">+7 800 555-86-28</a></p>
       <a class="button button-contacts" href="blank.html">Напишите нам</a>
+      </div>
+      <div class="marker">
+        <img src="img/map-marker.png" width="231" height="190" alt="Маркер">
+      </div>
     </section>
 
-    <section class="map">
-      <h2 class="visually-hidden">Как до нас добраться</h2>
-      <img src="img/map.png" width="1440" height="416" alt="Офис компании по адресу набережная реки Карповки, 5, литера П, Санкт-Петербург">
-    </section>
-
+    <div class="container">
     <div class="footer-columns">
     <section class="footer-social">
       <h2 class="visually-hidden">Давайте дружить!</h2>
