стилизация меню навигации

--- a/catalog.html
+++ b/catalog.html
@@ -20,7 +20,7 @@
             <ul class="site-navigation">
               <li><a href="blank.html">Студия</a></li>
               <li><a href="blank.html">Клиенты</a></li>
-              <li class="active"><a>Магазин</a></li>
+              <li class="site-navigation-current"><a>Магазин</a></li>
               <li><a href="blank.html">Контакты</a></li>
             </ul>
           <div class="user-navigation">
