добавление карты как картинки в футер

--- a/catalog.html
+++ b/catalog.html
@@ -214,18 +214,30 @@
     <footer class="main-footer">
       <section class="contacts-map">
         <h2 class="visually-hidden">Контакты</h2>
-        <div class="map">
+        <div class="map-img">
           <img src="img/map.png" width="1440" height="416" alt="Офис компании по адресу набережная реки Карповки, 5, литера П, Санкт-Петербург">
         </div>
-        <div class="contacts">
-        <h3>NЁRDS DESIGN STUDIO</h3>
-        <p class="contacts-address">наб. Реки Карповки,<br>
-          5 лит П, Санкт-Петербург</p>
-        <p class="contacts-phones"><a class="contacts-phone" href="tel:+78005558628">+7 800 555-86-28</a></p>
-        <a class="button button-contacts" href="blank.html">Напишите нам</a>
+        <div class="map-iframe">
+          <iframe
+          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1912.2176180660292!2d30.314264305280997!3d59.96733173167128!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696314db404b36b%3A0x1d934f1978240bba!2zTtGRcmRz!5e0!3m2!1sru!2sit!4v1655382382297!5m2!1sru!2sit"
+          height="416"
+          width ="100%"
+          style="border: 0"
+          allowfullscreen
+          title="Офис компании по адресу набережная реки Карповки, 5, литера П, Санкт-Петербург">
+        </iframe>
         </div>
-        <div class="marker">
-          <img src="img/map-marker.png" width="231" height="190" alt="Маркер">
+        <div class="contact-wrap container">
+          <div class="contacts">
+          <h3>NЁRDS DESIGN STUDIO</h3>
+          <p class="contacts-address">наб. Реки Карповки,<br>
+            5 лит П, Санкт-Петербург</p>
+          <p class="contacts-phones"><a class="contacts-phone" href="tel:+78005558628">+7 800 555-86-28</a></p>
+          <a class="button button-contacts" href="blank.html">Напишите нам</a>
+          </div>
+          <div class="marker">
+            <img src="img/map-marker.png" width="231" height="190" alt="Маркер">
+          </div>
         </div>
       </section>
 
