добавила декоративный элемент в каталог

--- a/catalog.html
+++ b/catalog.html
@@ -133,6 +133,9 @@
         <h2 class="visually-hidden">Список шаблонов</h2>
         <ul class="template-list">
           <li class="template-item">
+            <div class="template-window">
+              <div class="template-circle"></div>
+            </div>
             <div class="template-item-description">
               <a class="template-item-title" href="blank.html"><h3>Sedona</h3></a>
               <p class="info-site">Информационный сайт<br> для туристов</p>
