добавила декоративный элемент каждому шаблону

--- a/catalog.html
+++ b/catalog.html
@@ -146,6 +146,9 @@
             </div>
           </li>
           <li class="template-item">
+            <div class="template-window">
+              <div class="template-circle"></div>
+            </div>
             <div class="template-item-description">
               <a class="template-item-title" href="blank.html"><h3>Pink App</h3></a>
               <p class="info-site">Продуктовый лендинг<br>приложения для iOS и Android</p>
@@ -156,6 +159,9 @@
               </p>
           </li>
           <li class="template-item">
+            <div class="template-window">
+              <div class="template-circle"></div>
+            </div>
             <div class="template-item-description">
               <a class="template-item-title" href="blank.html"><h3>Barbershop</h3></a>
               <p class="info-site">Сайт салона красоты.<br>Для мужчин, да.</p>
@@ -166,6 +172,9 @@
               </p>
           </li>
           <li class="template-item">
+            <div class="template-window">
+              <div class="template-circle"></div>
+            </div>
             <div class="template-item-description">
               <a class="template-item-title" href="blank.html"><h3>MISHKA</h3></a>
               <p class="info-site">Интернет-магазин<br> вязаных игрушек</p>
@@ -176,6 +185,9 @@
               </p>
           </li>
           <li class="template-item">
+            <div class="template-window">
+              <div class="template-circle"></div>
+            </div>
             <div class="template-item-description">
               <a class="template-item-title" href="blank.html"><h3>A Plus</h3></a>
               <p class="info-site">Лендинг курсов повышения<br> квалификации</p>
@@ -186,6 +198,9 @@
               </p>
           </li>
           <li class="template-item">
+            <div class="template-window">
+              <div class="template-circle"></div>
+            </div>
             <div class="template-item-description">
               <a class="template-item-title" href="blank.html"><h3>КВАСТ</h3></a>
               <p class="info-site">Промо-сайт производителя<br>крафтового кваса</p>
