добавила файл с минификатором, подкл его к стр

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Дизайн-студия «Nёrd's»</title>
     <link rel="icon" href="favicon.ico">
     <link rel="stylesheet" href="css/normalize.css">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style.min.css">
   </head>
 
   <body class="page-body">
