--- a/catalog.html
+++ b/catalog.html
@@ -5,7 +5,7 @@
     <title>Дизайн-студия «Nёrd's»</title>
     <link rel="icon" href="favicon.ico">
     <link rel="stylesheet" href="css/normalize.css">
-    <link rel="stylesheet" href="css/style.min.css">
+    <link rel="stylesheet" href="css/style.css">
   </head>
 
   <body class="page-body inner-page">
@@ -15,7 +15,7 @@
         <div class="page-header-bar">
           <div class="page-navigation-wrapper">
             <a class="page-header-logo" href="index.html">
-              <img src="img/nerds-logo.svg" width="159" height="65" alt="Логотип дизайн-студии «Nёrd's»">
+              <img src="img/nerds-logo.svg" width="159" height="66" alt="Логотип дизайн-студии «Nёrd's»">
             </a>
             <ul class="site-navigation">
               <li><a href="blank.html">Студия</a></li>
