--- a/index.html
+++ b/index.html
@@ -5,30 +5,28 @@
     <title>Дизайн-студия «Nёrd's»</title>
     <link rel="icon" href="favicon.ico">
     <link rel="stylesheet" href="css/normalize.css">
-    <link rel="stylesheet" href="css/style.min.css">
+    <link rel="stylesheet" href="css/style.css">
   </head>
 
   <body class="page-body">
 
     <header class="page-header">
-      <nav class="page-navigation">
-        <div class="page-header-bar">
-          <div class="page-navigation-wrapper">
-            <a class="page-header-logo">
-              <img src="img/nerds-logo.svg" width="159" height="65" alt="Логотип дизайн-студии «Nёrd's»">
-            </a>
-            <ul class="site-navigation">
-              <li><a href="blank.html">Студия</a></li>
-              <li><a href="blank.html">Клиенты</a></li>
-              <li><a href="catalog.html">Магазин</a></li>
-              <li><a href="blank.html">Контакты</a></li>
-            </ul>
-            <div class="user-navigation">
-              <a class="cart-link" href="blank.html">Корзина</a>
-            </div>
+      <div class="page-header-bar">
+        <nav class="page-navigation container">
+          <a class="page-header-logo">
+            <img src="img/nerds-logo.svg" width="159" height="65" alt="Логотип дизайн-студии «Nёrd's»">
+          </a>
+          <ul class="site-navigation">
+            <li><a href="blank.html">Студия</a></li>
+            <li><a href="blank.html">Клиенты</a></li>
+            <li><a href="catalog.html">Магазин</a></li>
+            <li><a href="blank.html">Контакты</a></li>
+          </ul>
+          <div class="user-navigation">
+            <a class="cart-link" href="blank.html">Корзина</a>
           </div>
-        </div>
-      </nav>
+        </nav>
+      </div>
     </header>
 
     <main>
@@ -104,7 +102,7 @@
 
       <section class="statistics">
         <img src="img/nerds-logo2.png" width="360" height="208" alt="Логотип дизайн-студии «Nёrd's»">
-        <h3>с 2004 года Любим точность во всем:</h3>
+        <p>с 2004 года Любим точность во всем:</p>
         <dl class="description-list">
           <dt>Уровень самоотдачи</dt>
             <dd>146<sup>%</sup></dd>
