добавила отступ для кнопок

--- a/catalog.html
+++ b/catalog.html
@@ -11,24 +11,22 @@
   <body class="page-body inner-page">
 
     <header class="page-header">
-      <nav class="page-navigation">
-        <div class="page-header-bar">
-          <div class="page-navigation-wrapper">
-            <a class="page-header-logo" href="index.html">
-              <img src="img/nerds-logo.svg" width="159" height="66" alt="Логотип дизайн-студии «Nёrd's»">
-            </a>
-            <ul class="site-navigation">
-              <li><a href="blank.html">Студия</a></li>
-              <li><a href="blank.html">Клиенты</a></li>
-              <li class="site-navigation-current"><a>Магазин</a></li>
-              <li><a href="blank.html">Контакты</a></li>
-            </ul>
+      <div class="page-header-bar">
+        <nav class="page-navigation container">
+          <a class="page-header-logo" href="index.html">
+            <img src="img/nerds-logo.svg" width="159" height="66" alt="Логотип дизайн-студии «Nёrd's»">
+          </a>
+          <ul class="site-navigation">
+            <li><a href="blank.html">Студия</a></li>
+            <li><a href="blank.html">Клиенты</a></li>
+            <li class="site-navigation-current"><a>Магазин</a></li>
+            <li><a href="blank.html">Контакты</a></li>
+          </ul>
           <div class="user-navigation">
             <a class="cart-link" href="blank.html">Корзина</a>
           </div>
-          </div>
-        </div>
-      </nav>
+        </nav>
+      </div>
     </header>
 
     <main>
