--- a/catalog.html
+++ b/catalog.html
@@ -39,7 +39,7 @@
       <div class="page-catalog container">
       <section class="filters">
         <h2 class="visually-hidden">Фильтр товаров</h2>
-        <form class="filter" method="get" action="https://echo.htmlacademy.ru">
+        <form class="filter" method="get" action="https://echo.htmlacademy.ru" target="_blank">
           <fieldset>
             <legend class="filter-group">Стоимость:</legend>
             <div class="range-filter">
