--- a/index.html
+++ b/index.html
@@ -70,19 +70,19 @@
             <img src="img/laptop.png" width="300" height="146" alt="Ноутбук на красном фоне">
             <h3>Веб-сайты</h3>
             <p>Мир никогда не будет прежним<br> после того как увидит ваш сайт!</p>
-            <button class="button button-red" type="button">Заказать</button>
+            <a class="button button-red" href="blank.html">Заказать</a>
           </li>
           <li class="services-item">
             <img src="img/two-iPhones.png" width="300" height="146" alt="Черный и белый iPhone на зелёном фоне">
             <h3>Приложения</h3>
             <p>Покорите топ-10 приложений<br> в AppStore и Google Play</p>
-            <button class="button button-green" type="button">Заказать</button>
+            <a class="button button-green" href="blank.html">Заказать</a>
           </li>
           <li class="services-item">
             <img src="img/flipchart.png" width="300" height="146" alt="Флипчарт на жёлтом фоне">
             <h3>Презентации</h3>
             <p>Вы даже не подозреваете,<br> насколько вы изумительны!</p>
-            <button class="button button-yellow" type="button">Заказать</button>
+            <a class="button button-yellow" href="blank.html">Заказать</a>
           </li>
         </ul>
       </section>
