добавлен js файл

--- a/index.html
+++ b/index.html
@@ -225,5 +225,6 @@
       <button class="close-button" type="button" aria-label="Закрыть"></button>
     </section>
 
+    <script src="js/modal.js"></script>
   </body>
 </html>
