--- a/catalog.html
+++ b/catalog.html
@@ -317,5 +317,6 @@
         </form>
         <button class="close-button" type="button" aria-label="Закрыть"></button>
       </section>
+      <script src="js/modal.js"></script>
     </body>
 </html>
