--- a/index.html
+++ b/index.html
@@ -37,17 +37,17 @@
           <section class="features">
             <h2 class="visually-hidden">Преимущества</h2>
             <ul class="features-list">
-              <li class="feature-item feature-item-1 slide slide-current">
+              <li class="feature-item feature-item-1 slide-current">
                 <h3>Долго, дорого,<br>скрупулезно.</h3>
                 <p>Математически выверенный дизайн<br>для вашего сайта или мобильного приложения.</p>
                 <a class="button slide-button" href="blank.html">Узнать больше</a>
               </li>
-              <li class="feature-item feature-item-2 slide">
+              <li class="feature-item feature-item-2">
                 <h3>Любим математику<br>как никто другой</h3>
                 <p>Никакого креатива, только математические формулы<br>для расчета идеальных пропорций</p>
                 <a class="button slide-button" href="blank.html">Узнать больше</a>
               </li>
-              <li class="feature-item feature-item-3 slide">
+              <li class="feature-item feature-item-3">
                 <h3>Только ночь,<br>только хардкор</h3>
                 <p>Работать днем, как все? Мы против этого.<br>Ближе к полуночи работа только начинается.</p>
                 <a class="button slide-button" href="blank.html">Узнать больше</a>
