--- a/index.html
+++ b/index.html
@@ -54,9 +54,9 @@
               </li>
             </ul>
             <div class="slider-controls">
-              <button class="current" type="button" aria-label="Первый слайд"></button>
-              <button type="button" aria-label="Второй слайд"></button>
-              <button type="button" aria-label="Третий слайд"></button>
+              <button class="controls-button current" type="button" aria-label="Первый слайд"></button>
+              <button class="controls-button" type="button" aria-label="Второй слайд"></button>
+              <button class="controls-button" type="button" aria-label="Третий слайд"></button>
             </div>
           </section>
         </div>
@@ -225,6 +225,7 @@
       <button class="close-button" type="button" aria-label="Закрыть"></button>
     </section>
 
+    <script src="js/slide.js"></script>
     <script src="js/modal.js"></script>
   </body>
 </html>
