--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Дизайн-студия «Nёrd's»</title>
     <link rel="icon" href="favicon.ico">
     <link rel="stylesheet" href="css/normalize.css">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style.min.css">
   </head>
 
   <body class="page-body">
@@ -225,7 +225,6 @@
       <button class="close-button" type="button" aria-label="Закрыть"></button>
     </section>
 
-    <script src="js/slide.js"></script>
-    <script src="js/modal.js"></script>
+    <script src="js/index.min.js"></script>
   </body>
 </html>
