удалила тип textarea в модальном окне

--- a/catalog.html
+++ b/catalog.html
@@ -311,7 +311,7 @@
         </p>
         <p class="appointment-item appointment-comment">
           <label for="appointment-comment">Текст письма:</label>
-          <textarea id="appointment-comment" type="textarea" name="comment" rows="4" placeholder="В свободной форме"></textarea>
+          <textarea id="appointment-comment" name="comment" rows="4" placeholder="В свободной форме"></textarea>
         </p>
         <button class="button appointment-button" type="submit">Отправить</button>
         </form>
